[gd_scene load_steps=4 format=3 uid="uid://cprcmjiadf775"]

[ext_resource type="PackedScene" uid="uid://disr6a5q2uexd" path="res://bg.tscn" id="1_5gq68"]
[ext_resource type="Script" path="res://UI/edit_scene.gd" id="1_kywkx"]
[ext_resource type="PackedScene" uid="uid://c3fk707h7od6m" path="res://back.tscn" id="2_qk5yb"]

[node name="editScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kywkx")

[node name="Bg" parent="." instance=ExtResource("1_5gq68")]
layout_mode = 0

[node name="back" parent="." instance=ExtResource("2_qk5yb")]
layout_mode = 0

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.5
offset_top = -31.5
offset_right = 192.5
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -191.0
offset_top = 38.0
offset_right = 195.0
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "TYPE OF HABIT"

[node name="OptionButton" type="OptionButton" parent="HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 249.0
offset_top = -365.0
offset_right = -246.0
offset_bottom = -287.0
grow_horizontal = 2
grow_vertical = 0

[node name="hapus" type="Button" parent="HBoxContainer2"]
layout_mode = 2
text = "   DELETE   "

[node name="update" type="Button" parent="HBoxContainer2"]
layout_mode = 2
text = "   UPDATE   "

[connection signal="button_down" from="back" to="." method="_on_back_button_down"]
[connection signal="button_down" from="HBoxContainer2/hapus" to="." method="_on_hapus_button_down"]
[connection signal="button_down" from="HBoxContainer2/update" to="." method="_on_update_button_down"]
